# wise-funnel-analysis

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
database/: wise_analytics.duckdb
notebooks/: funnel_analysis.ipynb
sql/: create_transactions_table.sql  eda_pivot_table.sql  friction_duration.sql  funnel_by_all.sql  funnel_by_platform.sql  funnel_by_region_experience.sql  funnel_stage_time_series.sql  general_eda.sql
src/: __init__.py  database_manager.py  dataframe_processor.py
